
no codename
========

050930: CStringHelper::countLines added.
050927: Big good change: if effects don't contain state restoring pass
		(PLast), it is automatically generated by the engine. In this
		case, you need to call setStatesConfig() on EffectBundle at
		init time, supplying script that contains knowledge of restored
		states; and use RESTORE_PASS macro in the effect file. More to
		be doc'd at dingus.berlios.de really soon now.
050925: gfx/gui/Gui.cpp fix to make it compile with VC7.1.
050917: Factored out sprite/text functions from GUI for more convenient
		immediate mode calling. getX()/getY() added to CUIDialog.
050628: Texture bundle always takes miplevels from file for DDS textures
		(previously it would build missing miplevels). Other formats
		build full mip chain like before.
050627: Poor unicode text support in GUI (drawText() only for now).
050612: utils/Pool.h fixes to make it compile with VC7.1. Fixed by
		Rich Thomson.


Dingus codenamed "IC2005 demo"
========

050523: Better error messages in texture and surface creator classes.
050518: comparison operators to time_value added.
		Gui always uses antialiased fonts now.
050517: setTime() helper to CTimer added.
050502: Animation stuff can take arbitrary time sources, not only system
		time. Also refactored to use time_values instead of floats
		for anim start times. time_value::fromsec() bugfix.
050424: Dynamic geometry buffers issue warning when reached full capacity.
		Character animator can start anims not only from current time.
050422: Removed old unused GUI stuff from gfx/gui.
		Removed hierarchy context/nodes. Unused crap :)
		3dsMax 5/6 mesh/animation exporters added to the repository.
050418: Dynamic index buffer manager added (CDynamicIBManager).
		CVBChunk is now TVBChunk (typedef for CBufferChunk<CD3DVertexBuffer>).
		gfx/geometry/VBChunk.h is no more, use gfx/geometry/BufferChunk.h now.
050416: Character animator now supports bone scaling.