@@ -2,6 +2,10 @@
 no codename
 ========
 
+051001: Effects are checked for valid/missing state assignments (as
+		required for the state restore system to work). For example,
+		if you don't set SrcBlend when turning on alpha blending,
+		the engine will complain.
 050930: CStringHelper::countLines added.
 050927: Big good change: if effects don't contain state restoring pass
 		(PLast), it is automatically generated by the engine. In this
